kubernetes/apps/kube-system/cilium/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: websecure
  hostnames:
    - "hubble.${SECRET_DOMAIN}"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: chain-no-auth-restrict-networks
      backendRefs:
        - name: hubble-ui
          port: 80
