kubernetes/apps/kube-system/cilium/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hubble-ui
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: hubble-ui
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: traefik-internal-network
            io.kubernetes.pod.namespace: network
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: hubble-relay
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "4245"
              protocol: TCP
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hubble-relay
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: hubble-relay
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: hubble-ui
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "4245"
              protocol: TCP
  egress:
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "4244"
              protocol: TCP
    - toEntities:
        - kube-apiserver
